# PixelFerry

./: .gitignore  LICENSE  README.md  README_zh.md  design.md  pyproject.toml
pixelferry/: __init__.py  __main__.py  capture.py  codec.py  config.py  constants.py  corner_detect.py  framing.py  manifest.py  package.py  qr_detect.py  receiver.py  region_selector.py  sender.py  utils.py  verify.py
scripts/: make_package.py  play_frames.py  receive_frames.py  unpack_package.py
tests/: debug_capture_log.txt  test_codec.py  test_config.py  test_e2e.py  test_framing.py  test_manifest.py  test_package_roundtrip.py
tools/: calibrate_gamma.py  capture_window.py  debug_capture.py  debug_offset.py  manual_test_decode.py  show_frame_helper.py
